2024-01-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-kl-here-intro): new function.
	(find-git-intro): rewrote completely.

2023-12-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el (find-kl-debug-links): new function.
	(kl, kll, kls): call `find-kl-debug-links' when needed.

2023-12-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el: rewritten completely.

	* eev-tlinks.el (find-linki-links): new function.

	* eev-kla.el (ee-kl-line): new function.

	* eev-htests.el: new file.
	(find-tlhs, find-tlhi): new functions.

2023-12-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-find-here-debug-links): rewritten.

	* eev-intro.el (find-here-links-intro): rewrote the section "8.
	Debugging"; wrote the sections "9. The hlang" and "9.1. A
	historical note".

	* eev-hlinks.el (ee-find-here-links0): renamed to
	`ee-find-here-links-header'.

2023-12-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2023replsb" (now) has subtitles.

2023-12-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an entry for
	"eev2023replsb".
	(find-eev2023replsbvideo): new function.

2023-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el: added a provide.

	* eev-qrl.el: added a provide.

	* eev-intro.el (find-templates-intro): rewrote the section "5.
	Debugging the meat".

	* eev-qrl.el: new file.

	* eev-intro.el (find-templates-intro): mention eev-qrl.el.

2023-12-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el: new file.
	(ee-find-einfo-link, ee-find-eintro-link, ee-kl-sexp-klin)
	(eeklin, eeklins): moved from "eev-kla.el" to "eev-kl-here.el".

	* eev-load.el (eev-kl-here): added a (require 'eev-kl-here).

2023-12-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-macports-links): new function.

	* eev-multiwindow.el (find-4eee, find-4EEE): new functions.
