@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20240102
+;; Version:    20240103
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://anggtwu.net/eev-current/eev-intro.el>
@@ -56,6 +56,7 @@
 ;; Quick index:
 ;; «.find-intro-dual»			(to "find-intro-dual")
 ;; «.find-eintro»			(to "find-eintro")
+;;   «.skip-invisible»			(to "skip-invisible")
 ;;
 ;; «.find-eev-quick-intro»		(to "find-eev-quick-intro")
 ;; «.find-emacs-keys-intro»		(to "find-emacs-keys-intro")
@@ -260,6 +261,30 @@ Actually go to: (find-eev \"eev-intro.el\" \"find-foo-intro\" (ee-last-kill))."
 (defun find-eintro-latin1 (bigstr &rest pos-spec-list)
   "Like `find-eintro', but handles some strange chars in BIGSTR."
   (apply `find-eintro (ee-tolatin1 bigstr) pos-spec-list))
+
+
+;;;      _    _             _            _     _ _     _      
+;;;  ___| | _(_)_ __       (_)_ ____   _(_)___(_) |__ | | ___ 
+;;; / __| |/ / | '_ \ _____| | '_ \ \ / / / __| | '_ \| |/ _ \
+;;; \__ \   <| | |_) |_____| | | | \ V /| \__ \ | |_) | |  __/
+;;; |___/_|\_\_| .__/      |_|_| |_|\_/ |_|___/_|_.__/|_|\___|
+;;;            |_|                                            
+;;
+;; In buffers generated by `find-eintro' this sexp
+;;   (buffer-substring (ee-bol) (ee-eol))
+;; sometimes returns something like this,
+;;   "1. Introduction\n==============="
+;; with text properties indicating that the last part is invisible.
+;; The variants of `ee-bol' and `ee-eol' below fix this (but in a
+;; fragile way).
+;;
+;; «skip-invisible»  (to ".skip-invisible")
+
+(defun ee-bol-skip-invisible ()
+  (save-excursion (move-beginning-of-line) (point)))
+
+(defun ee-eol-skip-invisible ()
+  (save-excursion (move-beginning-of-line) (move-end-of-line) (point)))
 
 
 
@@ -15950,14 +15975,14 @@ files, but `kl', `kll', and `kls' support all these kinds of
 
 2. Try it!
 ==========
-Type `M-x kl'. This will \"kill a link to kere\"; it will detect
+Type `M-x kl'. This will \"kill a link to here\"; it will detect
 that we are in an \"intro\", and you will see this message in the
 echo area:
 
   Copied to the kill ring: (find-kl-here-intro)
 
 Now go to the line with the title of this section, and type `M-x
-kll'. This will \"kill a link to kere\", where \"here\" is this
+kll'. This will \"kill a link to here\", where \"here\" is this
 intro, and refine it to make it point to the current line. You
 will see one of these two messages in the echo area:
 
