@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20231228
+;; Version:    20240103
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://anggtwu.net/eev-current/eev-kla.el>
@@ -210,10 +210,11 @@ This function also runs `ee-kl-transform' on the result, but
 
 ;; Used in: (find-eev "eev-kl-here.el" "kl")
 ;;    Test: (ee-kl-line)
+;;
 (defun ee-kl-line ()
   (interactive "P")
-  (let* ((start (ee-bol))
-	 (end   (ee-eol))
+  (let* ((start (ee-bol-skip-invisible))
+	 (end   (ee-eol-skip-invisible))
 	 (str0  (buffer-substring start end))
 	 (str   (ee-no-properties str0)))
     (eeflash+ start end eeflash-copy)
